Installing elycharts using bower

--- a/src/bower.json
+++ b/src/bower.json
@@ -21,6 +21,7 @@
     "json2": "*",
     "underscore": "1.4.3",
     "less": "~1.7.1",
-    "raphael": "~2.1.2"
+    "raphael": "~2.1.2",
+    "ElyCharts": "voidlabs/ElyCharts"
   }
 }
