--- a/src/bower.json
+++ b/src/bower.json
@@ -16,12 +16,11 @@
     "tests"
   ],
   "dependencies": {
-    "jquery": "1.8.3",
-    "backbone": "0.9.10",
+    "jquery": "1.11.1",
+    "backbone": "~1.1.2",
     "json2": "*",
-    "underscore": "1.4.3",
     "less": "~1.7.1",
     "raphael": "~2.1.2",
-    "ElyCharts": "voidlabs/ElyCharts"
+    "lodash": "~2.4.1"
   }
 }
